--- a/fillPaintMaster/MyOrderTableViewCell.xib
+++ b/fillPaintMaster/MyOrderTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,7 +17,6 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homepage_gridview_8" translatesAutoresizingMaskIntoConstraints="NO" id="JsE-04-3IP">
                         <rect key="frame" x="13" y="34" width="69" height="69"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="69" id="N7s-OW-6UP"/>
                             <constraint firstAttribute="width" constant="69" id="XMi-0X-C2n"/>
@@ -25,7 +24,6 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="汽车美容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TJa-yL-YWJ">
                         <rect key="frame" x="13" y="8" width="154" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="1Rm-e2-90B"/>
                             <constraint firstAttribute="width" constant="154" id="VVj-Br-HAw"/>
@@ -35,8 +33,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已完成" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6M-xh-QFz">
-                        <rect key="frame" x="225" y="8" width="100" height="21"/>
-                        <animations/>
+                        <rect key="frame" x="225" y="58" width="100" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="aoA-hO-BQZ"/>
                             <constraint firstAttribute="width" constant="100" id="vfn-uE-j9r"/>
@@ -47,7 +44,6 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数量：2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCv-X9-cIW">
                         <rect key="frame" x="106" y="30" width="112" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="KXk-Bg-Y7B"/>
                             <constraint firstAttribute="width" constant="112" id="WdD-Ex-sOb"/>
@@ -58,7 +54,6 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总价：¥300" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odB-Mo-OAM">
                         <rect key="frame" x="106" y="78" width="112" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="112" id="rhn-fK-HYy"/>
                             <constraint firstAttribute="height" constant="21" id="vIf-OJ-hJN"/>
@@ -69,7 +64,6 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创建时间：2016-04-09 12:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zA0-qe-7hP">
                         <rect key="frame" x="13" y="108" width="219" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="219" id="a8n-Q2-KZO"/>
                             <constraint firstAttribute="height" constant="21" id="g8v-zg-JzY"/>
@@ -80,7 +74,6 @@
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsO-lD-Z8x">
                         <rect key="frame" x="251" y="99" width="70" height="30"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="byV-Kl-lrt"/>
                             <constraint firstAttribute="height" constant="30" id="kFZ-ti-Lde"/>
@@ -89,36 +82,48 @@
                             <color key="titleColor" red="1" green="0.086905940025464479" blue="0.10424151290680361" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1kj-63-oC3">
+                        <rect key="frame" x="251" y="8" width="70" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="MFZ-Gl-bEV"/>
+                            <constraint firstAttribute="width" constant="70" id="a7n-Df-DS6"/>
+                            <constraint firstAttribute="height" constant="30" id="sCx-pV-08d"/>
+                        </constraints>
+                        <state key="normal" title="继续支付">
+                            <color key="titleColor" red="1" green="0.086905940030000003" blue="0.1042415129" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                    </button>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="JsE-04-3IP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="1xm-IF-vSZ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="1kj-63-oC3" secondAttribute="trailing" constant="4" id="54f-Rw-6Nq"/>
                     <constraint firstItem="TJa-yL-YWJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="CO2-fM-G0Q"/>
                     <constraint firstItem="zA0-qe-7hP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="Kp1-Xh-WSC"/>
                     <constraint firstItem="JsE-04-3IP" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="MJ0-Ps-3br"/>
                     <constraint firstItem="odB-Mo-OAM" firstAttribute="top" secondItem="WCv-X9-cIW" secondAttribute="bottom" constant="27" id="OIl-4G-pFJ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="xsO-lD-Z8x" secondAttribute="trailing" constant="4" id="OcS-AH-4u7"/>
-                    <constraint firstItem="B6M-xh-QFz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Ojn-vJ-G54"/>
                     <constraint firstItem="odB-Mo-OAM" firstAttribute="leading" secondItem="JsE-04-3IP" secondAttribute="trailing" constant="24" id="QEU-Nc-iGQ"/>
                     <constraint firstItem="xsO-lD-Z8x" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Tq5-6P-mVi"/>
                     <constraint firstItem="WCv-X9-cIW" firstAttribute="top" secondItem="TJa-yL-YWJ" secondAttribute="bottom" constant="1" id="aEb-ZU-zJC"/>
                     <constraint firstItem="WCv-X9-cIW" firstAttribute="leading" secondItem="JsE-04-3IP" secondAttribute="trailing" constant="24" id="au1-lR-w6A"/>
                     <constraint firstItem="B6M-xh-QFz" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="i7T-bs-wT4"/>
                     <constraint firstItem="TJa-yL-YWJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="jvC-oh-EzP"/>
+                    <constraint firstItem="B6M-xh-QFz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="oNK-QA-Ha1"/>
                     <constraint firstItem="zA0-qe-7hP" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="rCc-9u-qBC"/>
+                    <constraint firstItem="1kj-63-oC3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zmq-jU-0gT"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="cancelButton" destination="xsO-lD-Z8x" id="8hg-Sv-vcj"/>
                 <outlet property="createTimeLabel" destination="zA0-qe-7hP" id="Noc-vo-HMr"/>
                 <outlet property="iconImageView" destination="JsE-04-3IP" id="AIz-gQ-pfp"/>
                 <outlet property="nameLabel" destination="TJa-yL-YWJ" id="P0A-TT-vZB"/>
                 <outlet property="numLabel" destination="WCv-X9-cIW" id="2ry-Pu-go2"/>
+                <outlet property="payButton" destination="1kj-63-oC3" id="E3W-1f-nSJ"/>
                 <outlet property="statusLabel" destination="B6M-xh-QFz" id="Naq-c3-fYT"/>
                 <outlet property="totalPriceLabel" destination="odB-Mo-OAM" id="uL2-cO-AZa"/>
             </connections>
-            <point key="canvasLocation" x="232.5" y="266"/>
+            <point key="canvasLocation" x="235.5" y="260"/>
         </tableViewCell>
     </objects>
     <resources>
